# DiffusionCurveRenderer

./: .clang-format  .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  CurveContainer.cpp  CurveContainer.h  CustomVariant.cpp  CustomVariant.h  DiffusionCurveRenderer.pro  DiffusionCurveRenderer.qrc  Helper.cpp  Main.cpp  README.md  Resources.qrc  Transformer.cpp  Transformer.h  Types.cpp  Types.h  Util.cpp  Util.h  Window.cpp  Window.h
Curves/: Bezier.cpp  Bezier.h  ColorPoint.cpp  ColorPoint.h  ControlPoint.cpp  ControlPoint.h  Curve.cpp  Curve.h
Dependencies/opencv-4.6.0/lib/: OpenCVConfig.cmake  OpenCVModules.cmake  opencv_core460.lib  opencv_flann460.lib  opencv_highgui460.lib  opencv_imgcodecs460.lib  opencv_imgproc460.lib  opencv_objdetect460.lib  opencv_video460.lib  opencv_videoio460.lib
Dependencies/qtimgui/modules/imgui/: imgui_demo.cpp
Include/: BlurPoint.h  ColorRenderer.h  Curve.h  CustomVariant.h  EdgeStack.h  EditModeCamera.h  Framebuffer.h  GaussianStack.h  Manager.h  PixelChain.h  Quad.h  RendererBase.h  ShaderManager.h  Vectorizer.h  ViewModeCamera.h
Libs/opencv-4.6.0/include/opencv2/: cvconfig.h
Libs/opencv-4.6.0/lib/: OpenCVModules-release.cmake  opencv_calib3d460.lib  opencv_dnn460.lib  opencv_features2d460.lib  opencv_ml460.lib  opencv_photo460.lib  opencv_stitching460.lib
Libs/qtimgui/lib/debug/: qt_imgui_widgets.lib
Renderers/: ContourRenderer.cpp  ContourRenderer.h  DiffusionRenderer.cpp  RendererManager.cpp  RendererManager.h  ScreenRenderer.cpp  ScreenRenderer.h
Renderers/Base/: Quads.cpp  Quads.h  Ticks.cpp  Ticks.h
Renderers/Diffusion/: ColorRenderer.cpp  ColorRenderer.h  DownsampleRenderer.cpp  DownsampleRenderer.h  JacobiRenderer.cpp  JacobiRenderer.h  UpsampleRenderer.cpp  UpsampleRenderer.h
Renderers/GUI/: BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  ControlPointRenderer.cpp  ControlPointRenderer.h
Renderers/GUI/Base/: LineRenderer.cpp  LineRenderer.h  PointRenderer.cpp  PointRenderer.h  RectangleRenderer.cpp  RectangleRenderer.h
Resources/CurveData/: astray.xml  blueapple.xml  dolphin.xml  fish.xml  flower.xml  fruits.xml  glass_droplet_blur.xml  gm_cup.xml  gm_flower.xml  gm_grapes.xml  lady_bug.xml  pink_flowers.xml  poivron.xml  roses.xml  tomatos.xml  zephyr.xml
Resources/Shaders/: Bezier.frag  Bezier.geom  Bezier.vert  Bitmap.frag  Bitmap.vert  Blit.frag  Blur.frag  Color.frag  Color.geom  CurveSelection.frag  CurveSelection.geom  Downsample.frag  Jacobi.frag  LastBlurPass.frag  LastBlurPass.geom  Quad.vert  Screen.frag  ScreenMultisample.frag  Upsample.frag
Resources/Shaders/Contour/: FragmentShader.frag  GeometryShader.geom  VertexShader.vert
Resources/Shaders/Line/: GeometryShader.geom
Resources/Shaders/Point/: FragmentShader.frag  GeometryShader.geom
Resources/Shaders/Rectangle/: GeometryShader.geom  VertexShader.vert
Resources/Shaders/Screen/: FragmentShader.frag  VertexShader.vert
Source/: Main.cpp
Source/Core/: Constants.cpp  Constants.h  Controller.cpp  Controller.h  CurveContainer.cpp  CurveContainer.h  EventListener.h  OrthographicCamera.cpp  OrthographicCamera.h  Window.cpp  Window.h
Source/Curve/: Bezier.cpp  Bezier.h  Curve.cpp  Curve.h  Spline.cpp  Spline.h
Source/EventHandler/: EventHandler.cpp  EventHandler.h
Source/Gui/: ImGuiWindow.cpp  ImGuiWindow.h  OverlayPainter.cpp  OverlayPainter.h
Source/Renderer/: RendererManager.cpp  RendererManager.h
Source/Renderer/Base/: Blitter.cpp  Blitter.h  Interval.cpp  Interval.h  MultisampleFramebuffer.cpp  MultisampleFramebuffer.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h
Source/Renderer/BitmapRenderer/: BitmapRenderer.cpp  BitmapRenderer.h
Source/Renderer/ContourRenderer/: ContourRenderer.cpp  ContourRenderer.h
Source/Renderer/CurveSelectionRenderer/: CurveSelectionFramebuffer.cpp  CurveSelectionFramebuffer.h  CurveSelectionRenderer.cpp  CurveSelectionRenderer.h
Source/Renderer/DiffusionRenderer/: BlurRenderer.cpp  BlurRenderer.h  ColorRenderer.cpp  ColorRenderer.h  DiffusionRenderer.cpp  DiffusionRenderer.h  DownsampleRenderer.cpp  DownsampleRenderer.h  UpsampleRenderer.cpp  UpsampleRenderer.h
Source/Structs/: Enums.h  Mouse.h
Source/Util/: Chronometer.cpp  Chronometer.h  Exporter.cpp  Exporter.h  Importer.cpp  Importer.h  Logger.cpp  Logger.h  Macros.h  Util.cpp  Util.h
Source/Vectorization/: VectorizationManager.cpp  VectorizationManager.h
Source/Vectorization/States/: ColorSampler.cpp  ColorSampler.h  CurveConstructor.cpp  CurveConstructor.h  EdgeStack.cpp  EdgeStack.h  EdgeTracer.cpp  EdgeTracer.h  GaussianStack.cpp  GaussianStack.h  Point.cpp  Potrace.cpp  Potrace.h  VectorizationStateBase.cpp  VectorizationStateBase.h
Sources/: Bezier.h  BitmapRenderer.cpp  BitmapRenderer.h  ColorPoint.h  ColorSampler.cpp  ColorSampler.h  Common.h  ContourRenderer.cpp  ContourRenderer.h  ControlPoint.cpp  ControlPoint.h  Controller.h  CurveConstructor.cpp  CurveConstructor.h  CurveManager.cpp  CurveManager.h  CustomVariant.cpp  DiffusionRenderer.cpp  DiffusionRenderer.h  EdgeTracer.cpp  EdgeTracer.h  Helper.h  Point.h  Points.cpp  Points.h  Potrace.cpp  Potrace.h  Quad.cpp  RendererBase.cpp  RendererManager.cpp  RendererManager.h  Shader.h  ViewModeCamera.cpp  Window.h
Src/: Bezier.cpp  BlurPoint.cpp  ColorPoint.cpp  ColorRenderer.cpp  Controller.cpp  Curve.cpp  EdgeStack.cpp  EditModeCamera.cpp  Framebuffer.cpp  GaussianStack.cpp  Helper.cpp  Main.cpp  Manager.cpp  Point.cpp  Resources.qrc  Shader.cpp  ShaderManager.cpp  Vectorizer.cpp  Window.cpp
Vectorization/: Vectorizer.cpp  Vectorizer.h
(+38 files in other folders)
